Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  Zope 2.11 beta 2 (unreleased)

    Bugs Fixed

      - Launchpad #200007: DateTime(anotherDateTime) now preserves the
        timezone.

      - Launchpad #213311:  Handle "unsubscriptable object" errors
        during publishing traversal.

      - Products.Five: Fixed vocabulary lookup broken in 2.11 beta 1.
        ZopeVocabularyRegistry wasn't hooked up on startup.

      - Launchpad #143813: zopectl now exits non-zero when
        child processes fail.

      - Products.Five: Resynced browser.adding with zope.app.container.
        This fixes some minor bugs and removes deprecated code.

      - Launchpad #173658:  Removed dead code in OFS.Traversable's
        'unrestrictedTraverse' (apparent NameError).

      - Launchpad #198274:  "empty" ZopePageTemplates could not be
        unpickled.

  Zope 2.11 beta 1 (2007/12/29)

    Restructuring

      - Turned deprecation warnings for manage_afterAdd, manage_beforeDelete
        and manage_afterClone methods into discouraged warnings. These methods
        will not be removed in Zope 2.11, but stay for the foreseeable future.
        Using events is still highly encouraged.

      - Moved two implements declarations from Five into the proper classes.

      - Document.sequence: replaced by zope.sequencesort

      - All Products folders as well as the zope and zope.app folders are
        declared as setuptools namespace packages now. See
        http://peak.telecommunity.com/DevCenter/setuptools#namespace-packages
        for more information about namespace packages.

      - ZPT: removed display of ZPT warnings since warnings were
        removed from the zope.pagetemplate implementation     

      - Ship Zope with a standard docutils 0.4 distribution, instead
        of a patched one.  Both trusted and untrusted code are still